random landing page

--- a/.slicemachine/mock-config.json
+++ b/.slicemachine/mock-config.json
@@ -44,7 +44,10 @@
         }
       }
     },
-    "project": {}
+    "project": {},
+    "homepage": {
+      "project": {}
+    }
   },
   "slices": {
     "Text": {
